--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "express": "^4.16.4",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3"
   },
