--- a/functions/package.json
+++ b/functions/package.json
@@ -14,5 +14,8 @@
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3"
   },
+  "engines": {
+    "node": "8"
+  },
   "private": true
 }
